# poem

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  run_poem.py
src/poem/: __init__.py  cli.py  core.py  directories.py  http.py  shim.py  spinner.py
tests/: test_cli.py  test_core.py
